# SAEGeometry

./: .gitignore  README.md  pyproject.toml  requirements.txt
SAEGeometry/: pyproject.toml
freq/: get_freq.ipynb
freq/src/: frequency.py
geometry/: 3fig.ipynb  __init__.py  abl_IOU.ipynb  ablation.py  cos_sim.py  cs_freq_analysis.py  cs_top.ipynb  data.py  geometry.py  obtain.py  obtain_acts.ipynb  test.ipynb  tmp.ipynb
res/cos_sim/: New Text Document.txt
scripts/: obtain_acts.sh
src/: __init__.py  freq.IPYNB  frequency.py  logger.py  t.ipynb  utils.py
src/analysis/freq/: freq.ipynb  get_freq.ipynb  write_data.ipynb
src/auto_interp/: interpret.py
src/freq/: abl_common.ipynb  max_freq.txt  results.txt  tmp.ipynb
src/sae_geometry/: cos.py  demo_feature_dashboards.html  e2e.py
src/topk/: buffer.py  dictionary.py  todo.md  trainer.py  training.py
test/: test_logger.py
unsupervised/: activation_value.py
