[tool.poetry]
name = "saegeometry"
version = "0.1.0"
description = ""
authors = ["xzascc <huohuangcw@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
torch = "2.0.0"
pytest = "^8.3.4"
termcolor = "2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
