[tool.poetry]
name = "saegeometry"
version = "0.1.0"
description = ""
authors = ["xzasc <huohuangcw@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
pytest = "^8.3.4"
numpy = "^2.2.1"
termcolor = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
